--- a/push-server/static/index.html
+++ b/push-server/static/index.html
@@ -5,7 +5,7 @@
 		<title>长连接系统</title>
 	</head>
 	<body>
-		<p><a href="/stats?key=notification">通知栏推送统计</a></p>
+		<p><a href="/stats">通知栏推送统计</a></p>
 		<p><a href="/push">push测试</a></p>
 		<p><a href="/uid">addUid</a></p>
 	</body>
