--- a/push-server/static/stats/index.html
+++ b/push-server/static/stats/index.html
@@ -3,6 +3,12 @@
 <meta charset="UTF-8">
 <head>
     <title>Statistics</title>
+    <style>
+       li{
+           list-style:none;
+       }
+    
+    </style>
 </head>
 <body>
 <div style="width:30%;padding: 25px;">
@@ -15,11 +21,14 @@
         success rate = success/total<br/>
     </div>
     <br/>
+
     <div>
-        key : <input id="key" value="">
-        <button onclick="javascript:loadData()">Query Data</button>
+        key :<input id="key" value="" type="hidden">
+        <ul>
+        </ul>
     </div>
     <br/>
+
     <div>
         SessionCount: <span id="sessionCount">0</span><br/>
         ios: <span id="iosSessionCount">0</span><br/>
@@ -31,6 +40,7 @@
     </div>
     <br/>
     <br/>
+
     <div>
         <label for="totalChartHour">
             Total Count(Hour)<br/><br/>
@@ -94,8 +104,7 @@
                 return sParameterName[1] === undefined ? true : sParameterName[1];
             }
         }
-    }
-    ;
+    };
 
     var options = {
         animation: false,
@@ -159,12 +168,32 @@
         });
     }
 
+    function loadQueryDataKeys() {
+        $.ajax({
+            type: 'GET',
+            url: 'api/state/getQueryDataKeys',
+            success: function (data) {
+                var result = data.result;
+                for (var i = 0; i < result.length; i++) {
+                    $("#key").append("<option value='"+result[i]+"'> "+result[i]+"</option>");
+                    var $li_1= $("<li><a href='#' text='"+result[i]+"' class='keys'>"+result[i]+"</a></li>");
+                    $("ul").append($li_1);
+                }
+                if(result.length>0) {
+                    $("#key").val(result[0])
+                    loadData();
+                }
+
+                $('.keys').click(function(){
+                    $("#key").val($(this).attr("text"));
+                    loadData();
+                });
+            }
+        });
+    }
+
     window.onload = function () {
-        if (!$("#key").val()) {
-            var key = getUrlParameter('key');
-            $("#key").val(key);
-        }
-        loadData();
+        loadQueryDataKeys();
     }
 
     function makeDayChart(canvas, name, serverData, timestamps) {
@@ -225,7 +254,6 @@
         }
         return chartData;
     }
-
 
 </script>
 </body>
