--- a/push-server/static/index.html
+++ b/push-server/static/index.html
@@ -5,8 +5,10 @@
 		<title>长连接系统</title>
 	</head>
 	<body>
-		<p><a href="/stats">通知栏推送统计</a></p>
-		<p><a href="/push">push测试</a></p>
+		<p><a href="https://github.com/xuduo/socket.io-push/tree/master/push-server" target="_blank">README</a></p>
+		<p><a href="/stats">stats</a></p>
+		<p><a href="/push">push</a></p>
+		<p><a href="/notification">notification</a></p>
 		<p><a href="/uid">addUid</a></p>
 	</body>
 </html>
