--- a/push-server/static/index.html
+++ b/push-server/static/index.html
@@ -10,5 +10,6 @@
 		<p><a href="/push">push</a></p>
 		<p><a href="/notification">notification</a></p>
 		<p><a href="/uid">addUid</a></p>
+		<p><a href="/handleStatsBase">handleStatsBase</a></p>
 	</body>
 </html>
